# xfce4-vala

./: ChangeLog  ChangeLog-git.sh  Makefile.am  NEWS  README  TODO  acinclude.m4  autogen.sh  configure.ac.in  module.xml  xfce4-vala.pc.in
examples/autotools/: Makefile.am  configure.in.in
examples/autotools/src/: Makefile.am
examples/panel-plugin/: Makefile.am  build.sh  button.desktop  button.desktop.in  button.vala  configure.ac
tests/: exo-1.vala  garcon-1.vala  libxfce4menu-0.1.vala  libxfce4util-1.0.vala  libxfcegui4-1.0.vala  libxfconf-0.vala
tests/panel-plugin/: button.vala
vapi/: exo-0.3.vapi  exo-1.vapi  exo-2.vapi  garcon-1.vapi  libxfce4menu-0.1.vapi  libxfce4panel-1.0.vapi  libxfce4panel-2.0.vapi  libxfce4ui-1.vapi  libxfce4ui-2.vapi  libxfce4util-1.0.vapi  libxfcegui4-1.0.vapi  libxfconf-0.vapi
